# rally-solana-mobile

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  Procfile  docker-compose.yml  nixpacks.toml  package.json  railway.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: index.ts
apps/api/src/config/: solana.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: notifications.ts  payments.ts  proposals.ts  squads.ts  streams.ts  users.ts
apps/api/src/services/: notification.ts  solana.ts
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  connect.tsx  index.tsx
apps/mobile/app/(tabs)/: _layout.tsx  pay.tsx  squads.tsx  streams.tsx
apps/mobile/app/squad/: [id].tsx
apps/mobile/src/: global.web.css
apps/mobile/src/components/: AnimatedPressable.tsx  BalanceDisplay.tsx  ContactAvatar.tsx  EmptyState.tsx  LoadingSkeleton.tsx  QuickActions.tsx  ScreenWrapper.tsx  SplashScreen.tsx  SquadCard.tsx  StreamCard.tsx  Toast.tsx  TransactionItem.tsx  VoteCard.tsx
apps/mobile/src/data/: mockData.ts
apps/mobile/src/hooks/: useResponsive.ts  (+3 more)
docs/: ARCHITECTURE.md  demo-script.md
docs/pitch-deck/: outline.md
programs/rally-squad/: Cargo.toml
programs/rally-squad/src/: lib.rs
programs/rally-stream/: Cargo.toml
programs/rally-stream/src/: lib.rs
programs/rally-vote/: Cargo.toml
programs/rally-vote/src/: lib.rs
scripts/: build-apk.sh  deploy-api.sh  deploy-programs.sh  deploy.sh  setup.sh
tests/: rally.ts
(+15 files in other folders)
