[package]
name = "rally-squad"
version = "0.1.0"
description = "Rally Squad — Shared wallet (multisig-lite) for group finance on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rally_squad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
