[package]
name = "rally-stream"
version = "0.1.0"
description = "Rally Stream — Real-time payment streaming engine on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rally_stream"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
