[package]
name = "rally-vote"
version = "0.1.0"
description = "Rally Vote — On-chain proposal and voting system for squad governance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rally_vote"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
